# origin_trace

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/orgin_trace_backend/: Cargo.toml  orgin_trace_backend.did
src/orgin_trace_backend/data/: devices1.json  devices2.json
src/orgin_trace_backend/src/: lib.rs
src/orgin_trace_frontend/: package.json
src/orgin_trace_frontend/src/: App.jsx
src/origin_trace_backend/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/origin_trace_frontend/: BACKEND_INTEGRATION_GUIDE.md  DFINITY_INTEGRATION_GUIDE.md  ICP_INTEGRATION_SETUP.md  README.md  index.html  package.json  tailwind.config.js
src/origin_trace_frontend/src/: App.jsx  App.tsx  index.css  tailwind.css  vite-env.d.ts
src/origin_trace_frontend/src/api/: devices.ts
src/origin_trace_frontend/src/components/: BuyerChatbot.tsx  DeviceAnalysisForm.tsx  DeviceCard.tsx  DeviceReportForm.tsx  FloatingChatButton.tsx  Footer.tsx  Modal.tsx  Navbar.tsx
src/origin_trace_frontend/src/data/: devices.ts  realDevices.json
src/origin_trace_frontend/src/hooks/: useDeviceReport.ts
src/origin_trace_frontend/src/ic/: agent.ts  backend.ts
src/origin_trace_frontend/src/pages/: About.tsx  Buyer.tsx  Chatbot.tsx  DeviceCertification.tsx  DeviceDetails.tsx  Home.tsx  HowToUse.tsx  Login.tsx  Marketplace.tsx  Seller.tsx
