[package]
name = "orgin_trace_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
candid = "0.10"
ic-cdk = "0.19.0-beta.2"
ic-cdk-macros = { version = "0.19.0-beta.2" }
ic-stable-structures = "0.6.9"  # أحدث إصدار متاح
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
num-bigint = "0.4"



[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
